fixed line spacing between bargraph and search bar
fixed line spacing between bargraph and search bar

--- a/AirPollution/public/stylesheets/indexStyle.css
+++ b/AirPollution/public/stylesheets/indexStyle.css
@@ -110,8 +110,7 @@ a {
     font-size: 4px;
     bottom: 20px;
     position: absolute;
-    /*font-size: 1rem;*/
-    font-size: 10px;
+    font-size: 1rem;
     overflow: hidden;
 }
 
